# methylcurate

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  agents.md  compose.yaml  environment-frozen.yml  justfile  llm_config.example.yml  opencode.json  pyproject.toml  qc_config.example.yml  requirements.txt  zensical.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml
CHANGELOG/: 0.1.0.md
backend/: Dockerfile
backend/methylcurate/: __init__.py  cli.py  methylcurate.py
backend/methylcurate/agent/graphs/: benchmarking.py  deps.py  geo.py  harmonization.py  help.py  qualitycontrol.py  router.py  subgraphs.py
backend/methylcurate/agent/llm/: client.py  logged_client.py
backend/methylcurate/agent/nodes/: benchmarking.py  harmonize.py  help.py  qc.py  router.py
backend/methylcurate/agent/nodes/geo/: __init__.py  column_extraction.py  data_extraction.py  download.py
backend/methylcurate/agent/prompts/: system_prompt.md
backend/methylcurate/agent/prompts/geo/metadata_checking/: column_feedback_loop_v2.md  immediate_column_check.md  immediate_single_column_check_v2.md  missing_age_check.md  subject_column_refinement.md
backend/methylcurate/agent/prompts/geo/metadata_extraction/: column_extraction_user_query.md  column_extraction_user_query_alt.md  extract_columns_from_metadata.md  identify_control_value.md  infer_methylation_data_column_scheme.md  infer_methylation_data_column_scheme_alt.md
backend/methylcurate/agent/prompts/geo/system/: system_concept_prompt.md  system_prompt.md
backend/methylcurate/agent/prompts/harmonize/guess_label/: guess_high_level_ontology_label_query.md  guess_high_level_ontology_label_system_prompt.md  guess_ontology_label_query.md  guess_ontology_label_system_prompt.md
backend/methylcurate/agent/prompts/harmonize/select_label/: select_high_level_ontology_label_query.md  select_high_level_ontology_label_system_prompt.md  select_ontology_label_query.md  select_ontology_label_system_prompt.md
backend/methylcurate/agent/prompts/help/: help_message.md
backend/methylcurate/agent/prompts/router/: clarify_user_intent.md  interpret_user_intent.md  system_prompt.md
backend/methylcurate/agent/registry/: nodes.py  services.py
backend/methylcurate/agent/runtime/: chat_runner.py  session_store.py
backend/methylcurate/agent/state/: models.py  utils.py
backend/methylcurate/api/: file_parser.py  schemas.py  server.py  session.py
backend/methylcurate/contracts/: clocks.py  common.py  geo.py  harmonize.py  qc.py  router.py
backend/methylcurate/tools/clocks/: clock_models.py  inference.py
backend/methylcurate/tools/geo/: __init__.py  download_softfile.py  extract_sample_level_metadata.py  extract_supplementary_data.py  metadata_column_extraction.py
backend/methylcurate/tools/harmonize/: __init__.py  harmonize_field.py
backend/methylcurate/tools/qc/: data_type_conversion.py  feature_selection.py  impute.py  qc.py  workflow.py
backend/methylcurate/utils/: error_codes.py  examples.py  exception_handling.py  helper.py  logging.py  memory.py  prompting.py  provenance.py
docs/: api.md  index.md  installation.md  usage.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: assistant copy.tsx  assistant.tsx  layout.tsx  toolkit.tsx
frontend/app/api/[..._path]/: route.ts
frontend/app/api/proxy/[...path]/: route.ts
frontend/components/assistant-ui/: thread.tsx  threadlist-sidebar.tsx
frontend/components/custom/: ExternalFastApiRuntimeProvider copy 2.tsx  ExternalFastApiRuntimeProvider copy 3.tsx  ExternalFastApiRuntimeProvider copy.tsx  ExternalFastApiRuntimeProvider.tsx
frontend/components/tool-ui/data-table/: data-table.tsx  formatters.tsx  utilities.ts
frontend/components/tool-ui/progress-tracker/: progress-tracker.tsx
frontend/components/tool-ui/shared/: decision-actions.tsx  pierre-dark-theme.js  pierre-light-theme.js  toolkit.tsx
frontend/components/tool-ui/shared-old/: _adapter.tsx  index.ts  tool-ui.tsx  toolkit.tsx
frontend/components/tool-ui/shared-old/media/: sanitize-href.ts
frontend/components/tool-ui/shared/media/: sanitize-href.ts
frontend/lib/: chatApi o.ts  chatApi.ts
tests/: test_clock_models.py  test_download_softfile.py  test_extract_sample_metadata.py  test_extract_supplementary.py  test_feature_selection.py  test_file_upload.py  test_harmonize_field.py  test_help.py  test_helper.py  test_inference.py  test_llm_config.py  test_metadata_column_extraction.py  test_methylcurate.py  test_provenance.py  test_provenance_integration.py  test_qc_agent_node.py  test_qc_config.py  test_qc_tools.py  test_session_store.py  test_state_utils.py  test_state_validators.py
