[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "methylcurate"
version = "0.1.0"
description = "Agentic-AI Tool for GEO dataset retrieval, metadata harmonization, and aging clock evaluation."
readme = "README.md"
authors = [
  {name = "Travyse Anthony Edwards", email = "travyse.edwards@pennmedicine.upenn.edu"}
]
maintainers = [
  {name = "Travyse Anthony Edwards", email = "travyse.edwards@pennmedicine.upenn.edu"}
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
license = {text = "MIT"}
dependencies = [
  "fastapi",
  "GEOparse",
  "greenery",
  "jinja2",
  "joblib",
  "langchain-anthropic",
  "langchain-core",
  "langchain-ollama",
  "langchain-openai",
  "langgraph",
  "numpy",
  "ollama",
  "pandas",
  "pyaging",
  "pyarrow",
  "pydantic",
  "pytz",
  "rapidfuzz",
  "requests",
  "rich",
  "scikit-learn",
  "scipy",
  "statsmodels",
  "torch",
  "tqdm",
  "typer",
]
requires-python = ">= 3.12"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typecheck" },
]
lint = [
    "ruff",
]
test = [
    "coverage",
    "pytest",
]
typecheck = [
    "ty",
]
docs = [
    "zensical",
    "mkdocstrings-python",
]

[project.urls]
bugs = "https://github.com/travyse/methylcurate/issues"
changelog = "https://github.com/travyse/methylcurate/releases"
documentation = "https://travyse.github.io/methylcurate/"
homepage = "https://github.com/travyse/methylcurate"

[project.scripts]
methylcurate = "methylcurate.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["backend/methylcurate"]

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ty.environment]
root = ["backend"]

[[tool.ty.overrides]]
include = ["tests/**"]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"backend/methylcurate/utils/examples.py" = ["E501"]
"backend/methylcurate/agent/nodes/harmonize.py" = ["E501"]
"backend/methylcurate/agent/nodes/qc.py" = ["E501"]
"backend/methylcurate/agent/nodes/router.py" = ["E501"]

[tool.coverage.run]
branch = true
parallel = true
source = ["backend/", "tests/"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 50
exclude_also = [
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@overload",
    "@typing.overload",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = true
default-groups = ["dev"]
