[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "methylcurate"
version = "0.1.0"
description = "Agentic-AI Tool for GEO dataset retrieval, metadata harmonization, and aging clock evaluation."
readme = "README.md"
authors = [
  {name = "Travyse Anthony Edwards", email = "travyse.edwards@pennmedicine.upenn.edu"}
]
maintainers = [
  {name = "Travyse Anthony Edwards", email = "travyse.edwards@pennmedicine.upenn.edu"}
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
license = {text = "MIT"}
dependencies = [
  "fastapi~=0.128",
  "GEOparse~=2.0",
  "greenery~=4.2",
  "jinja2~=3.1",
  "joblib~=1.5",
  "langchain-anthropic~=1.3",
  "langchain-core~=1.2",
  "langchain-ollama~=1.0",
  "langchain-openai~=1.1",
  "langgraph~=1.0",
  "langgraph-checkpoint-sqlite~=3.0",
  "numpy~=2.4",
  "ollama~=0.6",
  "pandas~=2.3",
  "pyaging~=0.1",
  "pyarrow~=23.0",
  "pydantic~=2.12",
  "pytz~=2025.2",
  "rapidfuzz~=3.14",
  "requests~=2.32",
  "rich~=14.2",
  "scikit-learn~=1.8",
  "scipy~=1.16",
  "statsmodels~=0.14",
  "tabulate~=0.9",
  "torch~=2.10",
  "tqdm~=4.67",
  "typer~=0.20",
]
requires-python = ">= 3.11,<3.13"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typecheck" },
]
lint = [
    "ruff~=0.14",
]
test = [
    "coverage",
    "pytest~=9.0",
    "pytest-asyncio>=0.23",
    "pytest-mock",
]
typecheck = [
    "ty~=0.0.34",
]
docs = [
    "zensical",
    "mkdocstrings-python",
]

[project.urls]
bugs = "https://github.com/travyse/methylcurate/issues"
changelog = "https://github.com/travyse/methylcurate/releases"
documentation = "https://travyse.github.io/methylcurate/"
homepage = "https://github.com/travyse/methylcurate"

[project.scripts]
methylcurate = "methylcurate.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["backend/methylcurate"]

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ty.environment]
root = ["backend"]

[[tool.ty.overrides]]
include = ["tests/**"]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"backend/methylcurate/utils/examples.py" = ["E501"]
"backend/methylcurate/agent/nodes/harmonize.py" = ["E501"]
"backend/methylcurate/agent/nodes/qc.py" = ["E501"]
"backend/methylcurate/agent/nodes/router.py" = ["E501"]

[tool.coverage.run]
branch = true
parallel = true
source = ["backend/", "tests/"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 50
exclude_also = [
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@overload",
    "@typing.overload",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = true
default-groups = ["dev"]
